# PruneHall

./: .gitignore  README.md  attention_to_plot.py  generate.sh  generate_and_save_summary.py  generate_single.sh  loop.sh  plot_loop.sh  plot_loop2.sh  pyproject.toml  run_evaluation.py  run_pipeline.py  save_attention_and_plot.py  setup.py  setup.sh
data/: legal_contracts.json  rct_summaries.json
pruning_study/: datamodels.py  eval_funcs.py  utils.py
pruning_study/prompts/: __init__.py
pruning_study/scripts/: get_legal_contracts.py
pruning_study/scripts/data_retrieval/: data_stats.py  get_rct.py  get_summac_benchmark.py
test_model/: download_model_for_development.py
